# tentoku-rs

./: .gitignore  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml
benches/: tokenize.rs
scripts/: compare_rich_outputs.py  run_python_rich.py  setup_python_reference.sh  verify_rich_outputs.py
src/: build_database.rs  database_path.rs  deinflect.rs  deinflect_rules.rs  dictionary.rs  error.rs  ffi.rs  key_index.rs  lib.rs  normalize.rs  sorting.rs  sqlite_dict.rs  tokenizer.rs  type_matching.rs  types.rs  variations.rs  word_search.rs  yoon.rs
tests/: cross_validate.rs
